--- a/index.html
+++ b/index.html
@@ -15,6 +15,29 @@
             <div class="italic"><i class="fa fa-italic"></i></div>
             <div class="underline"><i class="fa fa-underline"></i></div>
         </div>
+        <div class="other-style">
+            <div><i class="fa fa-align-center"></i></div>
+            <div><i class="fa fa-align-justify"></i></div>
+            <div><i class="fa fa-align-left"></i></div>
+            <div><i class="fa fa-align-right"></i></div>
+        </div> 
+        <div class="text-style">
+            <select class="style-select" >
+                <option >Arial Black</option>
+                <option >Calibiri</option>
+                <option >Ms Serif</option>
+                <option >Wide Latin</option>
+                <option >Roman</option>
+                <option >Verdana</option>
+            </select>
+            <select class="font-select">
+                <option >12</option>
+                <option >14</option>
+                <option >16</option>
+                <option >18</option>
+                <option >20</option>
+            </select>
+        </div>
     </div>
     <div class="address-content">
         <input type="text" id="address" disabled>
